--- a/client/back-office/views/forum.html
+++ b/client/back-office/views/forum.html
@@ -14,7 +14,10 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
-      $(document).ready(function () {
+      $(document).ready(async () => {
+        var user = await isUserLogged();
+        if (!user.admin)
+          window.location.href = "http://localhost:5000/b/views/home.html";
         $("#sidebar").load("../tabs/sidebar.html");
       });
 
