sistemati pulsanti save e cancel

--- a/client/back-office/views/companies.html
+++ b/client/back-office/views/companies.html
@@ -908,7 +908,7 @@
                 <button
                   class="tohidden` +
           index +
-          ` btn bg-cyan-400 p-1 m-2 hover:opacity-80 text-white font-bold rounded-xl self-center"
+          ` btn bg-update p-1 m-2 hover:opacity-80 text-white font-bold rounded-xl self-center"
                   onclick="{$('.tohidden` +
           index +
           `').addClass('hidden'); $('.toshow` +
