--- a/client/back-office/views/customers.html
+++ b/client/back-office/views/customers.html
@@ -260,7 +260,7 @@
 					</div>
 					</div>
 					<div class="flex flex-col self-center">
-						<button class="tohidden`+index+` btn bg-cyan-400 p-1 m-2 hover:opacity-80 text-white font-bold rounded-xl self-center"
+						<button class="tohidden`+index+` btn bg-update p-1 m-2 hover:opacity-80 text-white font-bold rounded-xl self-center"
 								onclick="{$('.tohidden`+index+`').addClass('hidden'); $('.toshow`+index+`').removeClass('hidden'); $('#expandCard` + index + `').removeClass('hidden'); $('#showMore` + index + `').addClass('hidden');setNewVip(` + index + `, ` + vip + `)}">
 							Update
 						</button>
