--- a/client/back-office/views/prenotations.html
+++ b/client/back-office/views/prenotations.html
@@ -309,6 +309,8 @@
         $("#showBtn").addClass("hidden");
         $("#hideBtn").removeClass("hidden");
         $("#resetBtn").removeClass("hidden");
+        if(user.admin)
+          $(".adminOnly").removeClass("hidden");
       };
 
       const hideFilters = () => {
@@ -328,6 +330,10 @@
       };
 
       // getPts();
+      $(document).ready(function () {
+        if(user.admin)
+          $(".adminOnly").removeClass("hidden");
+      })
     </script>
   </head>
   <body>
@@ -394,7 +400,7 @@
               </div>
               <!-- secondo e terzo filtro-->
               <div class="flex flex-col lg:flex-row">
-                <div class="flex flex-col sm:flex-row lg:mr-4">
+                <div class="flex flex-col sm:flex-row lg:mr-4 adminOnly hidden">
                   <span class="flex">
                     <label
                       for="filterCompanyId"
